added attandance sql

--- a/worknest-client-side/package.json
+++ b/worknest-client-side/package.json
@@ -24,6 +24,7 @@
     "socket.io-client": "^4.8.2",
     "recharts": "^3.6.0",
     "sweetalert2": "^11.26.10",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
